Change for multipart/mixed, use only a charset of the first attachment, r=sr=mscott, bug 54051.